Day3/Ch04/circuit-breaker/istio/destination-rule-httpbin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
#동일한 ns 에 등록이 필요
metadata:
  name: httpbin
spec:
  host: httpbin
#  제약조건을 걸어서 조건 이상이면 차단
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
